[tool.poetry]
name = "aula06-bootcamp"
version = "0.1.0"
description = ""
authors = ["Matheus Gentil <matheusvgentil@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
taskipy = "^1.13.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""
